--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul class="lists">
                     <li class="items item-1">
                         <a href="#">Products</a>
-                        <div class="item-info">
+                        <div class="item-info iio">
                             <div class="first">
                                 <h1>Payments App 1</h1>
                                 <p>Sanctus lorem rebum minim kasd feugait sadipscing et duo et voluptua diam rebum elitr diam amet dolor vel dolor option elitr dolore lorem invidunt lorem erat at eros sanctus amet</p>
@@ -40,7 +40,7 @@
                     </li>
                     <li class="items item-1">
                         <a href="#">Softwares</a>
-                        <div class="item-info">
+                        <div class="item-info iis">
                             <div class="first">
                                 <h1>Software 1</h1>
                                 <p>Sanctus lorem rebum minim kasd feugait sadipscing et duo et voluptua diam rebum elitr diam amet dolor vel dolor option elitr dolore lorem invidunt lorem erat at eros sanctus amet</p>
@@ -57,7 +57,7 @@
                     </li>
                     <li class="items item-1">
                         <a href="#">Pricing</a>
-                        <div class="item-info">
+                        <div class="item-info iit">
                             <div class="first">
                                 <h1>Free Version</h1>
                                 <p>Sanctus lorem rebum minim kasd feugait sadipscing et duo et voluptua diam rebum elitr diam amet dolor vel dolor option elitr dolore lorem invidunt lorem erat at eros sanctus amet</p>
@@ -70,7 +70,7 @@
                     </li>
                     <li class="items item-1">
                         <a href="#">Models</a>
-                        <div class="item-info">
+                        <div class="item-info iif">
                             <div class="first">
                                 <h1>E-Commerce</h1>
                                 <p>Sanctus lorem rebum minim kasd feugait sadipscing et duo et voluptua diam rebum elitr diam amet dolor vel dolor option elitr dolore lorem invidunt lorem erat at eros sanctus amet</p>
